--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "input": "^1.0.1",
     "lucide-react": "^0.552.0",
     "next": "15.5.6",
+    "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
