--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.35.1",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "input": "^1.0.1",
     "lucide-react": "^0.552.0",
     "next": "15.5.6",
+    "openai": "^6.9.0",
     "pg": "^8.16.3",
     "prisma": "^6.19.0",
     "react": "19.1.0",
